ref #842 fix warn on startup and docker image rights